# ml-final-project-streamlit-app

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: config.py  inference.py  models_init.py  utils.py
src/matplotlib/: __init__.py  color.py  iragca_cmr10.mplstyle  iragca_ml.mplstyle
