[project]
name = "ml-final-project-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.31.1",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "ml-final-project-streamlit-app",
    "tqdm>=4.67.1",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.uv.sources]
ml-final-project-streamlit-app = { workspace = true }
